# nov-fastapi

./: .env.example  README.md  pyproject.toml
.cursor/process/: generate-tasks.md
src/nov_fastapi/: __init__.py  config.py  exceptions.py  main.py
src/nov_fastapi/models/: schemas.py
src/nov_fastapi/providers/: __init__.py  gemini_provider.py
src/nov_fastapi/routes/: chat.py  sessions.py
src/nov_fastapi/services/: agent_service.py  session_manager.py
tasks/: prd-conversational-agent-api.md  tasks-prd-conversational-agent-api.md
